--- a/static/spatial-watch-party/index.css
+++ b/static/spatial-watch-party/index.css
@@ -44,9 +44,16 @@ button {
     position: fixed !important;
     display: flex;
     flex-direction: column;
-    width: 384px;
-    height: 256px; /* 216px + 40px for .videoTitleBar */
+    width: 216px;
     background-color: black;
+}
+
+.participantVideoContainer--other {
+    height: 216px;
+}
+
+.participantVideoContainer--mine {
+    height: calc(216px + 40px)
 }
 
 .videoTitleBar {
@@ -56,7 +63,7 @@ button {
     background-color: #101010;
 }
 
-.videoTitleBar:hover {
+.participantVideoContainer--mine:hover {
     cursor: move;
 }
 
@@ -69,4 +76,5 @@ button {
     width: 100%;
     height: 100%;
     transform: rotateY(180deg);
+    object-fit: cover
 }
