--- a/static/spatial-watch-party/index.css
+++ b/static/spatial-watch-party/index.css
@@ -50,10 +50,12 @@ button {
 
 .participantVideoContainer--other {
     height: 216px;
+    z-index: 10;
 }
 
 .participantVideoContainer--mine {
-    height: calc(216px + 40px)
+    height: calc(216px + 40px);
+    z-index: 30;
 }
 
 .videoTitleBar {
@@ -61,6 +63,25 @@ button {
     height: 40px;
     min-height: 40px;
     background-color: #101010;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.videoTitleBar:hover {
+    cursor: move;
+}
+
+.closeStreamingVideoButton {
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    font-size: 20px;
+    color: white;
+    text-align: center;
+}
+
+.closeStreamingVideoButton:hover {
+    cursor: pointer;
 }
 
 .participantVideoContainer--mine:hover {
@@ -76,5 +97,24 @@ button {
     width: 100%;
     height: 100%;
     transform: rotateY(180deg);
-    object-fit: cover
+    object-fit: cover;
+}
+
+.streamingVideoPlayerContainer {
+    position: fixed;
+    width: 300px;
+    height: calc(200px + 40px);
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    z-index: 20;
+}
+
+.youTubePlayerElement {
+    width: 100%;
+    height: 100%;
+}
+
+.displayNone {
+    display: none;
 }
