--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,14 @@
 </head>
 
 <body style="width: 100%; height: 100%; margin: 0; padding: 0;">
-    <div id="allVideosContainer" class="allVideosContainer"></div>
+    <div id="allVideosContainer" class="allVideosContainer">
+        <div class="streamingVideoPlayerContainer displayNone">
+            <div class="videoTitleBar">
+                <div class="closeStreamingVideoButton">X</div>
+            </div>
+            <div id="youTubePlayerElement" class="youTubePlayerElement"></div>
+        </div>
+    </div>
     <div class="controlsContainer">
         <div>
             <p>Spatial Watch Party</p>
@@ -22,6 +29,8 @@
     </div>
 </body>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js"></script>
+<script src="./watchVideoLogic.js"></script>
 <script src="https://hifi-spatial-audio-api.s3.amazonaws.com/releases/latest/HighFidelityAudio-latest.js"></script>
 <%- include('mainScript', { hiFiJWT: hiFiJWT}); %>
 <script src="https://media.twiliocdn.com/sdk/js/video/releases/2.8.0/twilio-video.min.js"></script>
