Some bugfixes and improvements

--- a/static/spatial-watch-party/index.css
+++ b/static/spatial-watch-party/index.css
@@ -67,6 +67,10 @@ button {
     flex-direction: row-reverse;
 }
 
+.videoTitleBar--YouTube {
+    background-color: #FF0000;
+}
+
 .videoTitleBar:hover {
     cursor: move;
 }
