--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 <body style="width: 100%; height: 100%; margin: 0; padding: 0;">
     <div id="allVideosContainer" class="allVideosContainer">
         <div class="streamingVideoPlayerContainer displayNone">
-            <div class="videoTitleBar">
+            <div class="videoTitleBar videoTitleBar--YouTube">
                 <div class="closeStreamingVideoButton">X</div>
             </div>
             <div id="youTubePlayerElement" class="youTubePlayerElement"></div>
