--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 </head>
 
 <body style="width: 100%; height: 100%; margin: 0; padding: 0;">
+    <canvas class="mainCanvas"></canvas>
     <div id="allVideosContainer" class="allVideosContainer">
         <div class="streamingVideoPlayerContainer displayNone">
             <div class="videoTitleBar videoTitleBar--YouTube">
@@ -30,6 +31,7 @@
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js"></script>
+<script src="./canvas.js"></script>
 <script src="./watchVideoLogic.js"></script>
 <script src="https://hifi-spatial-audio-api.s3.amazonaws.com/releases/latest/HighFidelityAudio-latest.js"></script>
 <%- include('mainScript', { hiFiJWT: hiFiJWT}); %>
