--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Spatial Watch Party</title>
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body style="width: 100%; height: 100%; margin: 0; padding: 0;">
@@ -14,29 +14,31 @@
         <div class="streamingVideoPlayerContainer displayNone">
             <div class="videoTitleBar videoTitleBar--YouTube">
                 <div class="closeStreamingVideoButton">X</div>
+                <div class="maximizeStreamingVideoButton">⬜</div>
             </div>
             <div id="youTubePlayerElement" class="youTubePlayerElement"></div>
         </div>
     </div>
     <div class="controlsContainer">
-        <div>
+        <div class="description">
             <p>Spatial Watch Party</p>
-            <p>(ID: <%- providedUserID %>) (Space: <%- spaceName %>)</p>
+            <p>@<%- providedUserID %> in <%- spaceName %></p>
         </div>
-        <button class="connectDisconnectButton" disabled="true">Click to Connect</button>
-        <button class="toggleInputMuteButton" disabled="true">Toggle Mic Mute (currently unmuted)</button>
-        <button class="toggleOutputMuteButton">Toggle Output Mute (currently unmuted)</button>
+        <button class="connectDisconnectButton" disabled="true">Connect</button>
+        <div class="toggleInputMuteButton toggleInputMuteButton--disabled"></div>
+        <div class="toggleOutputMuteButton"></div>
         <audio autoplay class="outputAudioEl"></audio>
+        <input class="videoURLInput" type="text" placeholder="YouTube URL" disabled="true">
     </div>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js"></script>
-<script src="./canvas.js"></script>
-<script src="./watchVideoLogic.js"></script>
+<script src="/js/canvas.js"></script>
+<script src="/js/watchVideoLogic.js"></script>
 <script src="https://hifi-spatial-audio-api.s3.amazonaws.com/releases/latest/HighFidelityAudio-latest.js"></script>
 <%- include('mainScript', { hiFiJWT: hiFiJWT}); %>
 <script src="https://media.twiliocdn.com/sdk/js/video/releases/2.8.0/twilio-video.min.js"></script>
-<script src="./controls.js"></script>
+<script src="/js/controls.js"></script>
 <%- include('twilio-video', { twilioJWT: twilioJWT}); %>
 
 </html>
