--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Spatial Watch Party</title>
 
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body style="width: 100%; height: 100%; margin: 0; padding: 0;">
@@ -33,12 +33,12 @@
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js"></script>
-<script src="/js/canvas.js"></script>
-<script src="/js/watchVideoLogic.js"></script>
+<script src="/spatial-watch-party/js/canvas.js"></script>
+<script src="/spatial-watch-party/js/watchVideoLogic.js"></script>
 <script src="https://hifi-spatial-audio-api.s3.amazonaws.com/releases/latest/HighFidelityAudio-latest.js"></script>
 <%- include('mainScript', { hiFiJWT: hiFiJWT}); %>
 <script src="https://media.twiliocdn.com/sdk/js/video/releases/2.8.0/twilio-video.min.js"></script>
-<script src="/js/controls.js"></script>
+<script src="/spatial-watch-party/js/controls.js"></script>
 <%- include('twilio-video', { twilioJWT: twilioJWT}); %>
 
 </html>
